fix: adjust overflow settings and layout for body and columns

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 body {
   height: 100vh;
   background-color: #222;
-  overflow: scroll;
+  overflow: hidden;
 }
 
 header {
@@ -79,10 +79,12 @@ header {
 }
 
 .col-left {
+  height: calc(100vh - 100px);
   display: grid;
   grid-template-columns: repeat(4, 280px);
   gap: 1.5rem;
   width: 70%;
+  overflow-y: auto;
 
   /* border: 5px solid white; */
 }
@@ -115,6 +117,8 @@ header {
 
 .col-right {
   width: 30%;
+  height: calc(100vh - 100px);
+  overflow-y: auto;
 }
 
 .right-img {
@@ -133,6 +137,7 @@ header {
 }
 
 .img-text {
+  display: flex;
   flex-direction: column;
   gap: 0.3rem;
   color: white;
